syntax = "proto3";

package com.hashimati.io;
option java_multiple_files = true;

message HelloRequest{

    string name = 1;
    int64 age = 2;

}

message HelloResponse{

    string message =1;

}

service HelloService{

    rpc sayHello(HelloRequest) returns (HelloResponse);


}